--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+server.port=3000
 
+spring.data.mongodb.database=admin
+spring.data.mongodb.uri= ${MONGO_DB_URI:mongodb://admin:123456@localhost:27017}
